pipeline: fix Entering directory check match

We no longer get the newlines from the build log, so we need not check
for the trailing \n in the logging output.

https://bugzilla.gnome.org/show_bug.cgi?id=780467